[gd_scene load_steps=10 format=4 uid="uid://b768oyuwbdb82"]

[ext_resource type="Script" uid="uid://cfsxnd4fbkdsn" path="res://Scenes/Levels/fightscene.gd" id="1_l4tqx"]
[ext_resource type="Texture2D" uid="uid://b8dprqb5y724i" path="res://Art Assets/Levels/Steakhouse/Steakhouse_floor.png" id="1_nxfkj"]
[ext_resource type="PackedScene" uid="uid://blecnxudvqt5d" path="res://Scenes/Characters/fighter_player.tscn" id="2_j5m2j"]
[ext_resource type="PackedScene" uid="uid://de8vx4hqpitsa" path="res://Scenes/Characters/fighter_police.tscn" id="3_l4tqx"]
[ext_resource type="Texture2D" uid="uid://dwsjufbcroj3d" path="res://Art Assets/UI/num_box_under.png" id="5_he842"]
[ext_resource type="Texture2D" uid="uid://bxg1jhstxqo5o" path="res://Art Assets/UI/num_box_progress.png" id="6_irdhu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6svt0"]
texture = ExtResource("1_nxfkj")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_j5m2j"]
tile_size = Vector2i(24, 24)
sources/1 = SubResource("TileSetAtlasSource_6svt0")

[sub_resource type="LabelSettings" id="LabelSettings_j5m2j"]
font_size = 25
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="fightscene" type="Node2D"]
script = ExtResource("1_l4tqx")

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAAQAAQAAAAAAAAAHAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAIAAQAAAAAAAAADAAIAAQAAAAAAAAACAAEAAQAAAAAAAAABAAEAAQAAAAAAAAABAAAAAQAAAAAAAAAAAAAAAQAAAAAAAAD/////AQAAAAAAAAD+////AQAAAAAAAAD9//7/AQAAAAAAAAD8//7/AQAAAAAAAAD7//7/AQAAAAAAAAD7//3/AQAAAAAAAAD6//3/AQAAAAAAAAD5//3/AQAAAAAAAAD5//z/AQAAAAAAAAD4//z/AQAAAAAAAAD4//v/AQAAAAAAAAD4//3/AQAAAAAAAAD4//7/AQAAAAAAAAD4////AQAAAAAAAAD4/wAAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wMAAQAAAAAAAAD4/wQAAQAAAAAAAAD5//v/AQAAAAAAAAD5//7/AQAAAAAAAAD5////AQAAAAAAAAD5/wAAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAAAAAD6//v/AQAAAAAAAAD6//z/AQAAAAAAAAD6//7/AQAAAAAAAAD6////AQAAAAAAAAD6/wAAAQAAAAAAAAD6/wEAAQAAAAAAAAD6/wIAAQAAAAAAAAD6/wMAAQAAAAAAAAD6/wQAAQAAAAAAAAD7//v/AQAAAAAAAAD7//z/AQAAAAAAAAD7////AQAAAAAAAAD7/wAAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wIAAQAAAAAAAAD7/wMAAQAAAAAAAAD7/wQAAQAAAAAAAAD8//v/AQAAAAAAAAD8//z/AQAAAAAAAAD8//3/AQAAAAAAAAD8////AQAAAAAAAAD8/wAAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD8/wMAAQAAAAAAAAD8/wQAAQAAAAAAAAD9//v/AQAAAAAAAAD9//z/AQAAAAAAAAD9//3/AQAAAAAAAAD9////AQAAAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wQAAQAAAAAAAAD+//v/AQAAAAAAAAD+//z/AQAAAAAAAAD+//3/AQAAAAAAAAD+//7/AQAAAAAAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wMAAQAAAAAAAAD+/wQAAQAAAAAAAAD///v/AQAAAAAAAAD///z/AQAAAAAAAAD///3/AQAAAAAAAAD///7/AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAD//wMAAQAAAAAAAAD//wQAAQAAAAAAAAAAAPv/AQAAAAAAAAAAAPz/AQAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAAAAP//AQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAABAPv/AQAAAAAAAAABAPz/AQAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAAAAAABAP//AQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAACAPv/AQAAAAAAAAACAPz/AQAAAAAAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAACAP//AQAAAAAAAAACAAAAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAADAPv/AQAAAAAAAAADAPz/AQAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAADAP//AQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAAEAPv/AQAAAAAAAAAEAPz/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP//AQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAPv/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP//AQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAPv/AQAAAAAAAAAGAPz/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP//AQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAPv/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP//AQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_j5m2j")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Fighter_player" parent="." instance=ExtResource("2_j5m2j")]
position = Vector2(-106, 18)
scale = Vector2(4, 4)

[node name="Fighter_police" parent="." instance=ExtResource("3_l4tqx")]
position = Vector2(110, 18)
scale = Vector2(4, 4)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Instructions" type="Label" parent="CanvasLayer"]
offset_left = -1.0
offset_top = 20.0
offset_right = 1152.0
offset_bottom = 131.0
text = "Chose a move each round
You must charge before punching
Blocking will prevent any damage"
label_settings = SubResource("LabelSettings_j5m2j")
horizontal_alignment = 1

[node name="WhoHasWon" type="Label" parent="CanvasLayer"]
offset_left = -2.0
offset_top = 160.0
offset_right = 1151.0
offset_bottom = 271.0
label_settings = SubResource("LabelSettings_j5m2j")
horizontal_alignment = 1

[node name="PoliceMove" type="Label" parent="CanvasLayer"]
offset_left = 733.0
offset_top = 570.0
offset_right = 1105.0
offset_bottom = 681.0
text = "Opponent Move"
label_settings = SubResource("LabelSettings_j5m2j")
horizontal_alignment = 1

[node name="Charge" type="Button" parent="CanvasLayer"]
offset_left = 49.0
offset_top = 563.0
offset_right = 185.0
offset_bottom = 621.0
text = "Charge"

[node name="Punch" type="Button" parent="CanvasLayer"]
offset_left = 201.0
offset_top = 563.0
offset_right = 337.0
offset_bottom = 621.0
text = "Punch"

[node name="Block" type="Button" parent="CanvasLayer"]
offset_left = 352.0
offset_top = 563.0
offset_right = 488.0
offset_bottom = 621.0
text = "Block
"

[node name="StartButton" type="Button" parent="CanvasLayer"]
offset_left = 512.0
offset_top = 467.0
offset_right = 648.0
offset_bottom = 525.0
text = "Start Fight
"

[node name="NumHideBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 554.0
offset_top = 303.0
offset_right = 578.0
offset_bottom = 328.0
scale = Vector2(2, 2)
fill_mode = 2
texture_under = ExtResource("5_he842")
texture_progress = ExtResource("6_irdhu")

[node name="EnemyHealthBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 979.0
offset_top = 77.0
offset_right = 1003.0
offset_bottom = 101.0
scale = Vector2(5, 2)
fill_mode = 1
texture_under = ExtResource("5_he842")
texture_progress = ExtResource("6_irdhu")

[node name="PlayerHealthBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 60.0
offset_top = 79.0
offset_right = 84.0
offset_bottom = 103.0
scale = Vector2(5, 2)
texture_under = ExtResource("5_he842")
texture_progress = ExtResource("6_irdhu")

[node name="RoundsTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="CanvasLayer/Charge" to="." method="_on_charge_pressed"]
[connection signal="pressed" from="CanvasLayer/Punch" to="." method="_on_punch_pressed"]
[connection signal="pressed" from="CanvasLayer/Block" to="." method="_on_block_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="RoundsTimer" to="." method="_on_rounds_timer_timeout"]
